Fix ByteBuffer API to use ScopedMemoryAccess as much as possible TODO: decide what to do with heap buffers

--- a/src/java.base/share/classes/java/nio/Direct-X-Buffer.java.template
+++ b/src/java.base/share/classes/java/nio/Direct-X-Buffer.java.template
@@ -299,7 +299,6 @@ class Direct$Type$Buffer$RW$$BO$
 
     public $Type$Buffer get($type$[] dst, int offset, int length) {
 #if[rw]
-        checkScope();
         if (((long)length << $LG_BYTES_PER_VALUE$) > Bits.JNI_COPY_TO_ARRAY_THRESHOLD) {
             Objects.checkFromIndexSize(offset, length, dst.length);
             int pos = position();
@@ -313,7 +312,7 @@ class Direct$Type$Buffer$RW$$BO$
             try {
 #if[!byte]
                 if (order() != ByteOrder.nativeOrder())
-                    UNSAFE.copySwapMemory(null,
+                    SCOPED_MEMORY_ACCESS.copySwapMemory(scope(), null, null,
                                           ix(pos),
                                           dst,
                                           dstOffset,
@@ -321,7 +320,7 @@ class Direct$Type$Buffer$RW$$BO$
                                           (long)1 << $LG_BYTES_PER_VALUE$);
                 else
 #end[!byte]
-                    UNSAFE.copyMemory(null,
+                    SCOPED_MEMORY_ACCESS.copyMemory(scope(), null, null,
                                       ix(pos),
                                       dst,
                                       dstOffset,
@@ -341,7 +340,6 @@ class Direct$Type$Buffer$RW$$BO$
 
     public $Type$Buffer get(int index, $type$[] dst, int offset, int length) {
 #if[rw]
-        checkScope();
         if (((long)length << $LG_BYTES_PER_VALUE$) > Bits.JNI_COPY_TO_ARRAY_THRESHOLD) {
             Objects.checkFromIndexSize(index, length, limit());
             Objects.checkFromIndexSize(offset, length, dst.length);
@@ -350,7 +348,7 @@ class Direct$Type$Buffer$RW$$BO$
             try {
 #if[!byte]
                 if (order() != ByteOrder.nativeOrder())
-                    UNSAFE.copySwapMemory(null,
+                    SCOPED_MEMORY_ACCESS.copySwapMemory(scope(), null, null,
                                           ix(index),
                                           dst,
                                           dstOffset,
@@ -358,7 +356,7 @@ class Direct$Type$Buffer$RW$$BO$
                                           (long)1 << $LG_BYTES_PER_VALUE$);
                 else
 #end[!byte]
-                    UNSAFE.copyMemory(null,
+                    SCOPED_MEMORY_ACCESS.copyMemory(scope(), null, null,
                                       ix(index),
                                       dst,
                                       dstOffset,
@@ -404,7 +402,6 @@ class Direct$Type$Buffer$RW$$BO$
 
     public $Type$Buffer put($Type$Buffer src) {
 #if[rw]
-        checkScope();
         super.put(src);
         return this;
 #else[rw]
@@ -414,7 +411,6 @@ class Direct$Type$Buffer$RW$$BO$
 
     public $Type$Buffer put($type$[] src, int offset, int length) {
 #if[rw]
-        checkScope();
         if (((long)length << $LG_BYTES_PER_VALUE$) > Bits.JNI_COPY_FROM_ARRAY_THRESHOLD) {
             Objects.checkFromIndexSize(offset, length, src.length);
             int pos = position();
@@ -428,7 +424,7 @@ class Direct$Type$Buffer$RW$$BO$
             try {
 #if[!byte]
                 if (order() != ByteOrder.nativeOrder())
-                    UNSAFE.copySwapMemory(src,
+                    SCOPED_MEMORY_ACCESS.copySwapMemory(scope(), null, src,
                                           srcOffset,
                                           null,
                                           ix(pos),
@@ -436,7 +432,7 @@ class Direct$Type$Buffer$RW$$BO$
                                           (long)1 << $LG_BYTES_PER_VALUE$);
                 else
 #end[!byte]
-                    UNSAFE.copyMemory(src,
+                    SCOPED_MEMORY_ACCESS.copyMemory(scope(), null, src,
                                       srcOffset,
                                       null,
                                       ix(pos),
@@ -456,7 +452,6 @@ class Direct$Type$Buffer$RW$$BO$
 
     public $Type$Buffer put(int index, $type$[] src, int offset, int length) {
 #if[rw]
-        checkScope();
         if (((long)length << $LG_BYTES_PER_VALUE$) > Bits.JNI_COPY_FROM_ARRAY_THRESHOLD) {
             Objects.checkFromIndexSize(index, length, limit());
             Objects.checkFromIndexSize(offset, length, src.length);
@@ -466,7 +461,7 @@ class Direct$Type$Buffer$RW$$BO$
             try {
 #if[!byte]
                 if (order() != ByteOrder.nativeOrder())
-                    UNSAFE.copySwapMemory(src,
+                    SCOPED_MEMORY_ACCESS.copySwapMemory(scope(), null, src,
                                           srcOffset,
                                           null,
                                           ix(index),
@@ -474,7 +469,7 @@ class Direct$Type$Buffer$RW$$BO$
                                           (long)1 << $LG_BYTES_PER_VALUE$);
                 else
 #end[!byte]
-                    UNSAFE.copyMemory(src,
+                    SCOPED_MEMORY_ACCESS.copyMemory(scope(), null, src,
                                       srcOffset,
                                       null,
                                       ix(index),
@@ -498,7 +493,7 @@ class Direct$Type$Buffer$RW$$BO$
         assert (pos <= lim);
         int rem = (pos <= lim ? lim - pos : 0);
         try {
-            UNSAFE.copyMemory(ix(pos), ix(0), (long)rem << $LG_BYTES_PER_VALUE$);
+            SCOPED_MEMORY_ACCESS.copyMemory(scope(), null, null, ix(pos), null, ix(0), (long)rem << $LG_BYTES_PER_VALUE$);
         } finally {
             Reference.reachabilityFence(this);
         }
