8253290: Tweak jextract code to use new MemoryAddress::asSegmentRestricted
Reviewed-by: sundar

--- a/src/jdk.incubator.jextract/share/classes/jdk/internal/jextract/impl/resources/RuntimeHelper.java.template
+++ b/src/jdk.incubator.jextract/share/classes/jdk/internal/jextract/impl/resources/RuntimeHelper.java.template
@@ -60,10 +60,24 @@ public class RuntimeHelper {
     }
 
     public static final MemorySegment lookupGlobalVariable(LibraryLookup[] LIBRARIES, String name, MemoryLayout layout) {
-        return lookup(LIBRARIES, name).map(s ->
-            nonCloseableNonTransferableSegment(MemorySegment.ofNativeRestricted(
-                 s.address(), layout.byteSize(), null, null, s
-            ))).orElse(null);
+            return lookup(LIBRARIES, name).map(s ->
+                nonCloseableNonTransferableSegment(s.address().asSegmentRestricted(layout.byteSize())
+                        .withOwnerThread(null)
+                        .withCleanupAction(new SymbolHolder(s))
+                )).orElse(null);
+    }
+
+    static class SymbolHolder implements Runnable {
+        LibraryLookup.Symbol symbol;
+
+        SymbolHolder(LibraryLookup.Symbol symbol) {
+            this.symbol = symbol;
+        }
+
+        @Override
+        public void run() {
+            // do nothing
+        }
     }
 
     public static final MemorySegment nonCloseableNonTransferableSegment(MemorySegment seg) {
@@ -100,8 +114,7 @@ public class RuntimeHelper {
     }
 
     public static MemorySegment asArrayRestricted(MemoryAddress addr, MemoryLayout layout, int numElements) {
-        return nonCloseableSegment(MemorySegment.ofNativeRestricted(addr, numElements * layout.byteSize(),
-               Thread.currentThread(), null, null));
+        return nonCloseableSegment(addr.asSegmentRestricted(numElements * layout.byteSize()));
     }
 
     public static MemorySegment asArray(MemorySegment seg, MemoryLayout layout, int numElements) {
