--- a/src/jdk.incubator.jextract/share/classes/jdk/internal/jextract/impl/resources/RuntimeHelper.java.template
+++ b/src/jdk.incubator.jextract/share/classes/jdk/internal/jextract/impl/resources/RuntimeHelper.java.template
@@ -12,9 +12,9 @@ import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 import java.io.File;
+import java.nio.file.Path;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Stream;
 
@@ -33,7 +33,7 @@ final class RuntimeHelper {
             return Arrays.stream(libNames)
                  .map(libName -> {
                       if (libName.indexOf(File.separatorChar) != -1) {
-                          return LibraryLookup.ofPath(libName);
+                          return LibraryLookup.ofPath(Path.of(libName));
                       } else {
                           return LibraryLookup.ofLibrary(libName);
                       }
