--- a/src/jdk.incubator.jextract/share/classes/jdk/internal/jextract/impl/resources/RuntimeHelper.java.template
+++ b/src/jdk.incubator.jextract/share/classes/jdk/internal/jextract/impl/resources/RuntimeHelper.java.template
@@ -12,10 +12,11 @@ import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 import java.io.File;
+import java.nio.file.Path;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
-import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Stream;
 
 import static jdk.incubator.foreign.CLinker.*;
 
@@ -32,7 +33,7 @@ final class RuntimeHelper {
             return Arrays.stream(libNames)
                  .map(libName -> {
                       if (libName.indexOf(File.separatorChar) != -1) {
-                          return LibraryLookup.ofPath(libName);
+                          return LibraryLookup.ofPath(Path.of(libName));
                       } else {
                           return LibraryLookup.ofLibrary(libName);
                       }
@@ -82,17 +83,9 @@ final class RuntimeHelper {
     }
 
     private static final Optional<LibraryLookup.Symbol> lookup(LibraryLookup[] LIBRARIES, String sym) {
-        for (LibraryLookup l : LIBRARIES) {
-            try {
-                return Optional.of(l.lookup(sym));
-            } catch (Throwable t) {
-            }
-        }
-        try {
-            return Optional.of(LibraryLookup.ofDefault().lookup(sym));
-        } catch (Throwable t) {
-            return Optional.empty();
-        }
+        return Stream.of(LIBRARIES)
+                .flatMap(l -> l.lookup(sym).stream())
+                .findFirst();
     }
 
     private static class VarargsInvoker {
