Simplify shared segment support, by removing dependencies on VM async exceptions

--- a/src/java.base/share/classes/jdk/internal/misc/X-ScopedMemoryAccess.java.template
+++ b/src/java.base/share/classes/jdk/internal/misc/X-ScopedMemoryAccess.java.template
@@ -76,11 +76,11 @@ public class ScopedMemoryAccess {
         registerNatives();
     }
 
-    public void closeScope(Scope scope) {
-        closeScope0(scope, Scope.ScopedAccessError.INSTANCE);
+    public boolean closeScope(Scope scope) {
+        return closeScope0(scope, Scope.ScopedAccessError.INSTANCE);
     }
 
-    native void closeScope0(Scope scope, Scope.ScopedAccessError exception);
+    native boolean closeScope0(Scope scope, Scope.ScopedAccessError exception);
 
     private ScopedMemoryAccess() {}
 
